# wa_example

./: .gitignore  CMakeLists.txt  guild.md  index.html
src/: factorial-service.cpp  factorial-service.h  factorial.cpp
